tests/should-fail/flags/shadow-typename.j
type effect extends handle

//# +shadow
function test takes effect effect returns nothing
endfunction
